# w266-final-project

./: .gitignore  Calculate_results.ipynb  Finetuning_turing7b.ipynb  Kaggle API.ipynb  README.md  back-translation.py  eda.ipynb  enhance_data.py  fine-tuned-results.txt  finetuned-non-selfinstruct-results.txt  finetuning_experiments.ipynb  generate_self_instruct_dataset.ipynb  get_data.py  inference_code_llama.py  inference_finetuned_llama.py  kaggle.json  non-finetuned-non-selfinstruct-baseline-results.txt  pyproject.toml  requirements.txt  self-instruct-non-finetuned-baseline-results.txt  turing7b-infernece.py  val.csv
