[tool.poetry]
name = "w266-final-project"
version = "0.1.0"
description = "Finetuning codellama to understand machine learning tasks more effectively"
authors = ["ctagard <ctagard19@gmail.com>"]
readme = "README.md"
packages = [{include = "w266_final_project"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
jupyterlab = "^4.0.7"
pandas = "^2.1.2"
beautifulsoup4 = "^4.12.2"
nbformat = "^5.9.2"
jupyter = "^1.0.0"
kaggle = "^1.5.16"
black = "^23.11.0"
openai = "^1.3.1"
tqdm = "^4.66.1"
aiohttp = "^3.8.6"
sklearn = "^0.0.post11"
scikit-learn = "^1.3.2"
huggingface-hub = "^0.19.4"
datasets = "^2.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"